--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,14 @@
 TODO:
 
 NEXT:
-[] LeadTable.tsx - there is order variable and gql query. Change that to pass this order and pass to backend.
-Use default value if not provided.
+[] Fix order by to include order by column
+[] Add filter by category and status
 
 LATER:
 [] Inject LeadMapper to RootMapper, pass DataFetchingFieldSelectionSet to argument of mapper func
 [] CleanUp Service and Database layers.
 
 DONE:
-
+[] LeadTable.tsx - there is order variable and gql query. Change that to pass this order and pass to backend.
+Use default value if not provided.
 
